# smartfinance

./: .env  README.md  main.py  pyproject.toml
src/: main.py
src/controllers/: UsersController.py
src/database/: bd tareas.sql  bd_tareas.sql
src/models/: schemasModel.py  shemasModel.py  userModel.py  usersModel.py
src/views/: LoginView.py
